<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.dogapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.dogapp.ui.favourites.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <activity
        android:id="@+id/nav_training"
        android:name="com.example.dogapp.ui.training.TrainingActivity"
        android:label="@string/menu_training"
        tools:layout="@layout/activity_training" />
    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.dogapp.ui.logout.LogoutActivity"
        android:label="@string/logout"
        tools:layout="@layout/activity_logout"/>
    <activity
        android:id="@+id/nav_about"
        android:name="com.example.dogapp.ui.about.AboutActivity"
        android:label="@string/about"
        tools:layout="@layout/activity_about"/>

</navigation>